--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "sass src/widescreen.scss src/widescreen.css",
+    "dev": "http-server src & sass src/widescreen.scss src/widescreen.css --watch",
+    "start": "http-server src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "http-server": "^14.1.1",
+    "sass": "^1.56.1"
+  }
 }
