--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-*.scc
-*.scc.map
+*.css
+*.css.map
 
 # compiled output
 /dist
