--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 *.css
 *.css.map
+*.js
+*.js.map
+note.md
 
 # compiled output
 /dist
