--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "sass src/widescreen.scss src/widescreen.css",
-    "dev": "http-server src & sass src/widescreen.scss src/widescreen.css --watch",
-    "start": "http-server src",
+    "build-js": "tsc src/application.ts --target es2015",
+    "build-css": "sass src/widescreen.scss src/widescreen.css",
+    "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "http-server": "^14.1.1",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "typescript": "^4.9.3"
   }
 }
